--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "sitemap": "next-sitemap  --config next-sitemap.config.js",
+    "analyze": "cross-env ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.13",
+    "@next/bundle-analyzer": "^13.1.1",
     "@next/font": "^13.0.7",
+    "cross-env": "^7.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "next": "13.0.7",
+    "next-sitemap": "^3.1.43",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
